--- a/css/GetGarcard.css
+++ b/css/GetGarcard.css
@@ -166,8 +166,9 @@ body{
     color:rgba(255,221,87,1);
     line-height:0.6rem;
     text-align: center;
+    vertical-align: middle;
 }
-.RuleBox p{
+.RuleBox li{
     display: inline-block!important;
 }
 .free{
