--- a/css/GetGarcard.css
+++ b/css/GetGarcard.css
@@ -169,8 +169,7 @@ body{
     vertical-align: middle;
 }
 .RuleBox li{
-    width: auto!important;
-    display: inline-block!important;
+    display: inline!important;
 }
 .free{
     color: white;
