--- a/css/GetGarcard.css
+++ b/css/GetGarcard.css
@@ -254,6 +254,7 @@ body{
 }
 #select ul{
     width: 100%;
+    height: 3.2rem;
     background-color: #FAFAFA;
     padding: 0rem 0.24rem;
     position: absolute;
@@ -261,6 +262,7 @@ body{
     left: 0;
     z-index: 20;
     float: left;
+    overflow: scroll;
 }
 #select li{
     height: 0.8rem;
