--- a/css/carNumber.css
+++ b/css/carNumber.css
@@ -167,7 +167,7 @@
     border-radius:4px;
     box-shadow: 2px 2px 2px #888888;
     /* max-width:48px; margin:0 auto; */
-    line-height:54px;
+    line-height:0.44rem;
     padding-top:2px;
 }
 .ul_keybord li span:active{
