--- a/css/carNumber.css
+++ b/css/carNumber.css
@@ -104,7 +104,7 @@
     border-radius:4px;
     box-shadow: 2px 2px 2px #888888;
     /* max-width:48px; margin:0 auto; */
-    line-height:32px;
+    line-height:0.6rem;
     padding-top:2px;
 }
 .ul_pro li span:active{
@@ -167,7 +167,7 @@
     border-radius:4px;
     box-shadow: 2px 2px 2px #888888;
     /* max-width:48px; margin:0 auto; */
-    line-height:48px;
+    line-height:0.6rem;
     padding-top:2px;
 }
 .ul_keybord li span:active{
