--- a/css/GetGarcard.css
+++ b/css/GetGarcard.css
@@ -504,7 +504,7 @@ body{
     line-height: 0.3rem;
 }
 @media screen and (max-height: 812px){
-    .InfoOccupy {
-        padding-top: 30%;
+    .button{
+        margin: 2.2rem auto 0;
     }
 }
