--- a/css/index.css
+++ b/css/index.css
@@ -142,7 +142,7 @@ body{
 .bgbox{
     width: 100%;
     height: 100%;
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
@@ -152,7 +152,7 @@ body{
 .bg{
     width: 100%;
     height: auto;
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
