--- a/css/index.css
+++ b/css/index.css
@@ -120,7 +120,7 @@ html{
 body{
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
@@ -132,7 +132,7 @@ body{
 #body{
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
@@ -142,7 +142,7 @@ body{
 .bgbox{
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
@@ -153,6 +153,15 @@ body{
     width: 100%;
     height: auto;
     position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+.con{
+    width: 100%;
+    height: 100%;
+    position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
@@ -203,7 +212,7 @@ body{
     width: 100%;
     /*height: 0.3rem;*/
     position: relative;
-    top: 60%;
+    top: 55%;
     /*bottom: 7.4%;*/
     left: 50%;
     right: 50%;
@@ -211,9 +220,6 @@ body{
     -webkit-transform: translate(-50%,0);
     -moz-transform: translate(-50%,0);
     -o-transform: translate(-50%,0);
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
     float: left;
     padding: 0 5.3%;
 }
